added instructions for downloading global geoids; updated settings

--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -88,6 +88,8 @@
     "    sset.DIR_OECD_REGIONS_RAW,\n",
     "    sset.DIR_LANDSCAN_RAW,\n",
     "    sset.DIR_IIASA_PROJECTIONS,\n",
+    "    sset.DIR_GEOG_DATUMS_XGM2019e_WGS84\n",
+    "    sset.DIR_GEOG_DATUMS_EGM96_WGS84\n",
     "]\n",
     "for direc in directories_to_create:\n",
     "    os.makedirs(direc, exist_ok=True)"
@@ -682,6 +684,19 @@
     "1. To download this dataset, you need to first apply for an Oak Ridge National Laboratory account (link [here](https://landscan.ornl.gov/user/apply)).\n",
     "2. After having gained access, go to the said website, click on \"DOWNLOAD\" -> \"LandScan Datasets\" -> \"Continue to download\" next to LandScan 2019.\n",
     "3. Click on \"By downloading LandScan 2019 I agree to the above terms\" in the following webpage; this will download the file `LandScan Global 2019.zip`. We save this in `sset.DIR_LANDSCAN_RAW`.\n",
+    "\n",
+    "### Global geoids, based on select Earth Gravitational Models (EGMs)\n",
+    "1. Go to the following International Centre for Global Earth Models (ICGEM) website (link [here](http://icgem.gfz-potsdam.de/calcgrid)) to reach the page \"Calculation of Gravity Field Functionals on Ellipsoidal Grids\".\n",
+    "2. Under **Model Selection**, select `XGM2019e_2159`.\n",
+    "3. Under **Functional Selection**, select `geoid`.\n",
+    "4. Under **Grid selection**, there's a **Grid Step [°]** option. Change the value to **0.05**. Also, make sure that the **Reference System** is `WGS84`.\n",
+    "5. Due to download size constraints, we need to download this data in 4 chunks. Do the following:\n",
+    "   - Split the full range of latitudes and longitudes in half, which yields the following 4 combinations of longitude-latitude ranges: $([-180, 0], [-90, 0]), ([-180, 0], [0, 90]), ([0, 180], [-90, 0])$, and $([0, 180], [0, 90])$.\n",
+    "   - Under **Grid selection** again, one can select the range of longitudes and latitudes. Select one of the above combinations and press `start computation`.\n",
+    "   - This will open up a new tab for calculations, which may take some time to complete. Once this is done, press **Download Grid**.\n",
+    "   - Once the download is complete, go back to the previous page with **Model selection**, **Functional selection**, and more. Make sure the selections you made are intact, select another longitude-latitude combination, and repeat the process until there are no combinations left.\n",
+    "6. Once the above steps are done, go back to Step 2 above; but instead of selecting `XGM2019e_2159` for **Model selection**, select `EGM96`. Go through the Steps 3 to 5 again with this new selection.\n",
+    "7. Once the downloads for `XGM2019e_2159` and `EGM96` are complete, you should have 4 files for each model (8 in total, in `.gdf` format). Save the `XGM2019e_2159` files in `sset.DIR_GEOG_DATUMS_XGM2019e_WGS84` and `EGM96` files in `sset.DIR_GEOG_DATUMS_EGM96_WGS84`.\n",
     "\n",
     "### CIA World Factbook (compiled by Coleman [2020])\n",
     "\n",
