--- a/notebooks/create-SLIIDERS-ECON/exposure/5-get_positive_elev_tiles.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/5-get_positive_elev_tiles.ipynb
@@ -12,16 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/srv/conda/envs/notebook/lib/python3.9/site-packages/dask_gateway/client.py:21: FutureWarning: format_bytes is deprecated and will be removed in a future release. Please use dask.utils.format_bytes instead.\n",
+      "  from distributed.utils import LoopRunner, format_bytes\n"
+     ]
+    }
+   ],
    "source": [
     "import geopandas as gpd\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import rhg_compute_tools.kubernetes as rhgk\n",
     "import xarray as xr\n",
     "\n",
+    "import rhg_compute_tools.kubernetes as rhgk\n",
     "from sliiders import settings as sset\n",
     "from sliiders import spatial"
    ]
@@ -165,8 +174,14 @@
     "tiles[\"llat\"] = np.floor(tiles[\"lat\"])\n",
     "tiles[\"llon\"] = np.floor(tiles[\"lon\"])\n",
     "\n",
-    "exp_tiles = spatial.get_all_exp_tiles(sset.PATH_EXPOSURE_BLENDED, filter_field=\"value\")\n",
-    "pop_tiles = spatial.get_all_exp_tiles(sset.PATH_LANDSCAN_INT, filter_field=\"population\")\n",
+    "assets = pd.read_parquet(\n",
+    "    sset.PATH_ASSET_VALUE_BLENDED.as_uri(), columns=[\"x_ix\", \"y_ix\"]\n",
+    ").values.T\n",
+    "exp_tiles = spatial.get_all_exp_tiles(assets)\n",
+    "\n",
+    "pop = pd.read_parquet(sset.PATH_LANDSCAN_INT)\n",
+    "pop = pop.loc[pop.population > 0, [\"x_ix\", \"y_ix\"]].values.T\n",
+    "pop_tiles = spatial.get_all_exp_tiles(pop)\n",
     "\n",
     "coastaldem_tiles = [t.stem for t in sset.DIR_COASTALDEM.glob(\"*.tif\")]"
    ]
