fix call to get_all_exp_tiles

--- a/notebooks/create-SLIIDERS-ECON/exposure/5-get_positive_elev_tiles.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/5-get_positive_elev_tiles.ipynb
@@ -177,11 +177,11 @@
     "assets = pd.read_parquet(\n",
     "    sset.PATH_ASSET_VALUE_BLENDED.as_uri(), columns=[\"x_ix\", \"y_ix\"]\n",
     ").values.T\n",
-    "exp_tiles = spatial.get_all_exp_tiles(assets)\n",
+    "exp_tiles = spatial.get_all_exp_tiles(*assets)\n",
     "\n",
     "pop = pd.read_parquet(sset.PATH_LANDSCAN_INT)\n",
     "pop = pop.loc[pop.population > 0, [\"x_ix\", \"y_ix\"]].values.T\n",
-    "pop_tiles = spatial.get_all_exp_tiles(pop)\n",
+    "pop_tiles = spatial.get_all_exp_tiles(*pop)\n",
     "\n",
     "coastaldem_tiles = [t.stem for t in sset.DIR_COASTALDEM.glob(\"*.tif\")]"
    ]
