--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -33,23 +33,22 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import ssl\n",
     "import subprocess\n",
     "import tarfile\n",
-    "from urllib import request as urequest\n",
-    "\n",
+    "from io import BytesIO\n",
     "from pathlib import Path\n",
+    "from urllib import request as urequest\n",
+    "from zipfile import ZipFile\n",
+    "\n",
     "import dask.distributed as dd\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import requests\n",
     "from dask_gateway import Gateway\n",
     "from pandas_datareader import wb as dr_wb\n",
-    "from tqdm.auto import tqdm\n",
-    "from zipfile import ZipFile\n",
-    "import requests\n",
-    "import ssl\n",
-    "from io import BytesIO\n",
-    "\n",
     "from sliiders import settings as sset\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "# dask gateway setup\n",
     "gateway = Gateway()\n",
@@ -688,7 +687,15 @@
     "1. Travel to this [link](https://github.com/iancoleman/cia_world_factbook_api) (credit to Coleman [2020]), and scroll down to the `readme.md`.\n",
     "2. In the **Data** section of the `readme.md` file, there should be a link on \"Historical\"; click on this link to travel to a `mega.nz` website having `weekly_json.7z` file.\n",
     "3. After checking that the filename to download is `weekly_json.7z`, download the said file by clicking on the \"Download\" button.\n",
-    "4. When download is successful, import `weekly_json.7z` to the preferred directory (`sset.DIR_YPK_RAW` in this implementation)."
+    "4. When download is successful, import `weekly_json.7z` to the preferred directory (`sset.DIR_YPK_RAW` in this implementation).\n",
+    "\n",
+    "### HydroSHEDS\n",
+    "1. Go to https://hydrosheds.org/downloads\n",
+    "2. Download the \"standard\" level-0 HydroBASINS files for each continent (use the Dropbox link if available--this appears as \"NOTE: you may also download data from here.\" as of 8/16/21. Download the shapefiles into the directory defined in `settings.py` by `DIR_HYDROBASINS_RAW`\n",
+    "\n",
+    "### National Levee Database\n",
+    "1. Go to https://levees.sec.usace.army.mil/\n",
+    "2. Download the National Levee Database by state into `DIR_NLDB` as defined by `settings.py`"
    ]
   }
  ],
