MDT download instructions added; MDT Path updated

--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -69,6 +69,7 @@
     "MPD_DIRECTORY = Path(os.path.dirname(sset.PATH_MPD_RAW))\n",
     "GWDB_DIRECTORY = Path(os.path.dirname(sset.PATH_GWDB2021_RAW))\n",
     "SRTM15PLUS_DIRECTORY = Path(os.path.dirname(sset.PATH_SRTM15_PLUS))\n",
+    "MDT_DIRECTORY = Path(os.path.dirname(sset.PATH_GEOG_MDT_RAW))\n",
     "\n",
     "directories_to_create = [\n",
     "    sset.DIR_YPK_RAW,\n",
@@ -77,6 +78,7 @@
     "    MPD_DIRECTORY,\n",
     "    GWDB_DIRECTORY,\n",
     "    SRTM15PLUS_DIRECTORY,\n",
+    "    MDT_DIRECTORY,\n",
     "    sset.DIR_WB_WDI_RAW,\n",
     "    sset.DIR_LITPOP_RAW,\n",
     "    sset.DIR_GEG15_RAW,\n",
@@ -88,8 +90,8 @@
     "    sset.DIR_OECD_REGIONS_RAW,\n",
     "    sset.DIR_LANDSCAN_RAW,\n",
     "    sset.DIR_IIASA_PROJECTIONS,\n",
-    "    sset.DIR_GEOG_DATUMS_XGM2019e_WGS84\n",
-    "    sset.DIR_GEOG_DATUMS_EGM96_WGS84\n",
+    "    sset.DIR_GEOG_DATUMS_XGM2019e_WGS84,\n",
+    "    sset.DIR_GEOG_DATUMS_EGM96_WGS84,\n",
     "]\n",
     "for direc in directories_to_create:\n",
     "    os.makedirs(direc, exist_ok=True)"
@@ -691,6 +693,12 @@
     "   - Once the download is complete, go back to the previous page with **Model selection**, **Functional selection**, and more. Make sure the selections you made are intact, select another longitude-latitude combination, and repeat the process until there are no combinations left.\n",
     "6. Once the above steps are done, go back to Step 2 above; but instead of selecting `XGM2019e_2159` for **Model selection**, select `EGM96`. Go through the Steps 3 to 5 again with this new selection.\n",
     "7. Once the downloads for `XGM2019e_2159` and `EGM96` are complete, you should have 4 files for each model (8 in total, in `.gdf` format). Save the `XGM2019e_2159` files in `sset.DIR_GEOG_DATUMS_XGM2019e_WGS84` and `EGM96` files in `sset.DIR_GEOG_DATUMS_EGM96_WGS84`.\n",
+    "\n",
+    "### Global Mean Dynamic Ocean Topography (MDT) from AVISO+\n",
+    "**Note**: While this dataset has a relatively open license, you will first need to obtain a MY AVISO+ account, which requires verification from the AVISO+ team and may take several days or weeks.\n",
+    "1. Go to the following AVISO+ website for **MDT CNES-CLS18**: link [here](https://www.aviso.altimetry.fr/en/data/products/auxiliary-products/mdt/mdt-global-cnes-cls18.html).\n",
+    "2. Once on the page, download the dataset through your MY AVISO+ account (click on `access via MY AVISO+` link and follow the instructions).\n",
+    "3. After following the instructions, you will acquire the file `mdt_cnes_cls18_global.nc.gz`. Extract the file `mdt_cnes_cls18_global.nc` from the `.gz` file and save it as `sset.PATH_GEOG_MDT_RAW`.\n",
     "\n",
     "### CIA World Factbook (compiled by Coleman [2020])\n",
     "\n",
