remove double-dissolves; fix blended exposure path

--- a/notebooks/create-SLIIDERS-ECON/exposure/5-get_positive_elev_tiles.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/5-get_positive_elev_tiles.ipynb
@@ -12,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/srv/conda/envs/notebook/lib/python3.9/site-packages/dask_gateway/client.py:21: FutureWarning: format_bytes is deprecated and will be removed in a future release. Please use dask.utils.format_bytes instead.\n",
-      "  from distributed.utils import LoopRunner, format_bytes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import numpy as np\n",
@@ -175,7 +166,7 @@
     "tiles[\"llon\"] = np.floor(tiles[\"lon\"])\n",
     "\n",
     "assets = pd.read_parquet(\n",
-    "    sset.PATH_ASSET_VALUE_BLENDED.as_uri(), columns=[\"x_ix\", \"y_ix\"]\n",
+    "    sset.PATH_EXPOSURE_BLENDED.as_uri(), columns=[\"x_ix\", \"y_ix\"]\n",
     ").values.T\n",
     "exp_tiles = spatial.get_all_exp_tiles(*assets)\n",
     "\n",
