--- a/notebooks/create-SLIIDERS-ECON/exposure/5-get_positive_elev_tiles.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/5-get_positive_elev_tiles.ipynb
@@ -19,9 +19,8 @@
     "import geopandas as gpd\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import xarray as xr\n",
-    "\n",
     "import rhg_compute_tools.kubernetes as rhgk\n",
+    "import xarray as xr\n",
     "from sliiders import settings as sset\n",
     "from sliiders import spatial"
    ]
@@ -165,9 +164,7 @@
     "tiles[\"llat\"] = np.floor(tiles[\"lat\"])\n",
     "tiles[\"llon\"] = np.floor(tiles[\"lon\"])\n",
     "\n",
-    "assets = pd.read_parquet(\n",
-    "    sset.PATH_EXPOSURE_BLENDED.as_uri(), columns=[\"x_ix\", \"y_ix\"]\n",
-    ").values.T\n",
+    "assets = pd.read_parquet(sset.PATH_EXPOSURE_BLENDED, columns=[\"x_ix\", \"y_ix\"]).values.T\n",
     "exp_tiles = spatial.get_all_exp_tiles(*assets)\n",
     "\n",
     "pop = pd.read_parquet(sset.PATH_LANDSCAN_INT)\n",
@@ -357,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
