Generalize spatial funcs and consolidate nearest_region workflow (#15)
* handle crs in voronoi generation

* drop HOME from settings

* move create coastline segment to nearest_regions

* generalize funcs in spatial.py

* consolidate nearest_region workflow

* renumber exposure notebooks

* update create-SLIIDERS-ECON based on spatial.py changes

* drop unneeded intermed files from settings

* fix sliiders.geography import

* change fpath name

* condense litpop loading/processing nb

* use indexes in voronoi code and add synthesizing func

* add print messages to synthesis func

* fix ix_min/max in get_spherical_voronoi

* use single segment-region function

* handle edge case of points on meridian

* avoid geodataframe.explode geopandas bug

* fix join in get_stations_by_iso_voronoi

* fix append_extra_pts func

* fix bug in join_coastlines_to_isos

* drop placeholder voronois after use

* ignore when placeholder is not there

* keep_geom_type within generate_voronoi_from_segents

* fix multiple ISOS in generate_voronoi_from_segments

* drop unused ciam_polys.parquet

* update creat-segment-regions nb

* force geodataframe for get_voronoi_regions

* fix assertion in get_voronoi_regions

* update explode_gdf_to_pts docstring

* update get_all_exp_tiles

* fix call to get_all_exp_tiles

* drop unnecessary PATH_INLAND_TILE_LIST

* flake8 linting

* remove double-dissolves; fix blended exposure path

* rm .as_uri()

Co-authored-by: Ian Bolliger <ian.bolliger@blackrock.com>
Co-authored-by: Daniel Allen <danielpaulallen@gmail.com>

--- a/notebooks/create-SLIIDERS-ECON/exposure/1-create-coastline-segments.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/1-create-coastline-segments.ipynb
@@ -50,7 +50,7 @@
     "import xarray as xr\n",
     "from shapely.geometry import Point\n",
     "\n",
-    "from sliiders.settings import DIR_CIAM_SHAPEFILES, PATH_CIAM_SITES, PATH_GTSM_SURGE"
+    "from sliiders.settings import DIR_CIAM_SHAPEFILES, PATH_SEG_CENTROIDS, PATH_GTSM_SURGE"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "# Export resulting layers\n",
-    "gtsm1.to_file(PATH_CIAM_SITES)  # final set of majority GTSM points for CIAM segs"
+    "gtsm1.to_file(PATH_SEG_CENTROIDS)  # final set of majority GTSM points for CIAM segs"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
