--- a/notebooks/create-SLIIDERS-ECON/exposure/3-fill_missing_litpop_with_geg.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/3-fill_missing_litpop_with_geg.ipynb
@@ -21,8 +21,18 @@
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
-    "\n",
-    "%autoreload 2\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import zipfile\n",
+    "from pathlib import Path\n",
     "\n",
     "import dask.dataframe as ddf\n",
     "import geopandas as gpd\n",
@@ -32,21 +42,15 @@
     "import numpy_groupies as npg\n",
     "import pandas as pd\n",
     "import regionmask\n",
-    "import rhg_compute_tools.kubernetes as rhgk\n",
     "import xarray as xr\n",
-    "import rioxarray\n",
     "import xesmf as xe\n",
     "from cartopy import crs as ccrs\n",
     "from cartopy import feature as cfeature\n",
     "\n",
-    "from sliiders.geography import get_iso_geometry\n",
-    "from sliiders.spatial import grid_ix_to_val, grid_val_to_ix\n",
-    "from sliiders import settings as sset\n",
-    "\n",
-    "import zipfile\n",
+    "import rhg_compute_tools.kubernetes as rhgk\n",
     "from sliiders import __file__\n",
-    "from pathlib import Path\n",
-    "import os"
+    "from sliiders import settings as sset\n",
+    "from sliiders.spatial import get_iso_geometry, grid_ix_to_val, grid_val_to_ix"
    ]
   },
   {
@@ -100,45 +104,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # convert litpop from csvs to a parquet file\n",
-    "litpop = ddf.read_csv(str(sset.PATH_LITPOP_RAW))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "litpop = litpop.rename(columns={\"latitude\": \"lat\", \"longitude\": \"lon\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "litpop[\"value\"] = litpop[\"value\"].astype(np.float32)\n",
-    "litpop[\"lat\"] = litpop[\"lat\"].astype(np.float32)\n",
-    "litpop[\"lon\"] = litpop[\"lon\"].astype(np.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "litpop = litpop.repartition(npartitions=nworkers).persist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "litpop = (\n",
+    "    ddf.read_csv(\n",
+    "        str(sset.PATH_LITPOP_RAW),\n",
+    "        dtype={\"value\": \"float32\", \"lat\": \"float32\", \"lon\": \"float32\"},\n",
+    "    )\n",
+    "    .rename(columns={\"latitude\": \"lat\", \"longitude\": \"lon\"})\n",
+    "    .repartition(npartitions=nworkers)\n",
+    "    .persist()\n",
+    ")\n",
     "litpop_meta = pd.read_csv(sset.DIR_LITPOP_RAW / \"_metadata_countries_v1_2.csv\")"
    ]
   },
@@ -776,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
