--- a/notebooks/create-SLIIDERS-ECON/exposure/5-get_positive_elev_tiles.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/5-get_positive_elev_tiles.ipynb
@@ -21,7 +21,6 @@
     "import pandas as pd\n",
     "import rhg_compute_tools.kubernetes as rhgk\n",
     "import xarray as xr\n",
-    "\n",
     "from sliiders import settings as sset\n",
     "from sliiders import spatial"
    ]
@@ -165,8 +164,12 @@
     "tiles[\"llat\"] = np.floor(tiles[\"lat\"])\n",
     "tiles[\"llon\"] = np.floor(tiles[\"lon\"])\n",
     "\n",
-    "exp_tiles = spatial.get_all_exp_tiles(sset.PATH_EXPOSURE_BLENDED, filter_field=\"value\")\n",
-    "pop_tiles = spatial.get_all_exp_tiles(sset.PATH_LANDSCAN_INT, filter_field=\"population\")\n",
+    "assets = pd.read_parquet(sset.PATH_EXPOSURE_BLENDED, columns=[\"x_ix\", \"y_ix\"]).values.T\n",
+    "exp_tiles = spatial.get_all_exp_tiles(*assets)\n",
+    "\n",
+    "pop = pd.read_parquet(sset.PATH_LANDSCAN_INT)\n",
+    "pop = pop.loc[pop.population > 0, [\"x_ix\", \"y_ix\"]].values.T\n",
+    "pop_tiles = spatial.get_all_exp_tiles(*pop)\n",
     "\n",
     "coastaldem_tiles = [t.stem for t in sset.DIR_COASTALDEM.glob(\"*.tif\")]"
    ]
@@ -216,15 +219,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sset.DIR_EXPOSURE_BINNED"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ocean_shape = tiles[tiles[\"below50\"]].buffer(0.01).unary_union\n",
     "\n",
     "ocean_shape = list(ocean_shape.geoms)[np.argmax([g.area for g in ocean_shape.geoms])]\n",
@@ -237,8 +231,7 @@
     "    tiles[(tiles[\"coastaldem\"]) & (~tiles[\"contiguous_with_ocean\"])][[\"tile_name\"]]\n",
     "    .sort_values(\"tile_name\")\n",
     "    .reset_index(drop=True)\n",
-    ")\n",
-    "inland.to_parquet(sset.PATH_INLAND_TILE_LIST, index=False)"
+    ")"
    ]
   },
   {
@@ -361,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
