--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -715,21 +715,7 @@
     "\n",
     "### HydroSHEDS\n",
     "1. Go to https://hydrosheds.org/downloads\n",
-    "2. Download the \"standard\" level-0 HydroBASINS files for each continent (use the Dropbox link if available--this appears as \"NOTE: you may also download data from here.\" as of 8/16/21. Download the shapefiles into the directory defined in `settings.py` by `DIR_HYDROBASINS_RAW`\n",
-    "\n",
-    "### National Levee Database\n",
-    "Levee files are downloaded from the [US National Levee Database Map](https://levees.sec.usace.army.mil/) as zip files. For each state listed as a sub-directory within `DIR_NLDB` (defined in `settings.py`), do the following:\n",
-    "1. Go to https://levees.sec.usace.army.mil/\n",
-    "2. Either click on `dashboard` or enter the search bar and type the name of the state of interest\n",
-    "3. Within the dashboard in the left hand panel, choose `State` as the geography type and type the state of interest\n",
-    "4. Scroll to the bottom of the left hand panel and click `Add Filters`\n",
-    "5. Click `Systems` under `Filter Group`\n",
-    "6. Scroll down within the right panel and next to `System type` click `Add to list`. clicl `Done`\n",
-    "7. Back on the dashboard under `System type` select `Levee system` and click `Update results`\n",
-    "8. Once the data are displayed properly, int he upper right corner of the dashboard view click `Download data`\n",
-    "9. Choose `Shapefile`\n",
-    "10. A file named `levees-shp.zip` will download. This can be downloaded locally and then uploaded to the state's directory within `DIR_NLDB`.\n",
-    "11. Once downloaded, extract `LeveedArea.zip` so that the `POLYGON.xyz` files appear directly inside the state's directory."
+    "2. Download the \"standard\" level-0 HydroBASINS files for each continent (use the Dropbox link if available--this appears as \"NOTE: you may also download data from here.\" as of 8/16/21. Download the shapefiles into the directory defined in `settings.py` by `DIR_HYDROBASINS_RAW`"
    ]
   }
  ],
