--- a/notebooks/create-SLIIDERS-ECON/exposure/1. generate-protected-areas.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/1. generate-protected-areas.ipynb
@@ -29,8 +29,9 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "from shapely.geometry import Polygon, box\n",
-    "from sliiders import settings as sset\n",
     "from tqdm.notebook import tqdm\n",
+    "\n",
+    "from sliiders import settings as sset\n",
     "\n",
     "warnings.filterwarnings(\"ignore\", message=\".*initial implementation of Parquet.*\")"
    ]
@@ -540,14 +541,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8fc7461-efe7-4958-9171-246117d83479",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_basins = gpd.read_parquet(sset.PATH_MANUAL_PROTECTED_AREAS)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "27ec19f6-fb7a-4366-8b19-87aa34abbe5b",
    "metadata": {},
    "source": [
     "## Combine protected areas for global processing\n",
-    "- US National Levee Database (NLDB)\n",
+    "- US National Levee Database (NLDB) and manual areas\n",
     "- Large global endorheic basins\n",
     "- Manual boxes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c4c7a5f-d711-4537-96a3-b58a7d6ccf96",
+   "metadata": {},
+   "source": [
+    "These `nldb_and_manual_areas` regions were prepared manually and are included in the `sliiders` repository. Louisiana levees were downloaded from the National Levee Database (https://levees.sec.usace.army.mil/), and buffered areas corresponding to low-lying areas in California, Missouri, and Michigan that are known not to be vulnerable to coastal flooding were created."
    ]
   },
   {
@@ -557,22 +576,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nldb_states = [p.name for p in sset.DIR_NLDB.iterdir()]"
+    "nldb_and_manual_areas = gpd.read_parquet(sset.PATH_US_MANUAL_PROTECTED_AREAS)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1bfa2f5c-ffc5-4742-8add-5d133a667872",
+   "cell_type": "markdown",
+   "id": "fda0cdf8-c491-4efd-a97c-0503f0956517",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "state_gdfs = []\n",
-    "for state in tqdm(nldb_states):\n",
-    "    state_gdf = gpd.read_file(sset.DIR_NLDB / state / \"POLYGON.shp\")\n",
-    "    state_gdf[\"state\"] = state\n",
-    "    state_gdfs.append(state_gdf)\n",
-    "nldb = pd.concat(state_gdfs, ignore_index=True)"
+    "Netherlands (assume all of the European Netherlands is protected)"
    ]
   },
   {
@@ -591,7 +603,7 @@
    "id": "4d6035bf-c212-4dfe-a86b-f4992882c8f3",
    "metadata": {},
    "source": [
-    "Manual boxes"
+    "Manual boxes (additional to those defined in `sset.PATH_US_MANUAL_PROTECTED_AREAS`"
    ]
   },
   {
@@ -655,23 +667,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131f2c3a-e5b5-4ff0-9717-17a6747239f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nldb = nldb[[\"id\", \"state\", \"geometry\"]].rename(columns={\"id\": \"levee_segment_id\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0a72ea14-a3d3-450d-954e-0e71586fffa6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nldb[\"protection_group\"] = \"National Levee Database\"\n",
-    "nldb[\"protection_type\"] = \"levee\"\n",
-    "nldb[\"country\"] = \"USA\"\n",
+    "nldb_and_manual_areas[\"country\"] = \"USA\"\n",
     "\n",
     "protected_areas_nld[\"levee_segment_id\"] = -1\n",
     "protected_areas_nld[\"protection_group\"] = \"Netherlands\"\n",
@@ -701,7 +701,7 @@
     "protected_areas = (\n",
     "    pd.concat(\n",
     "        [\n",
-    "            nldb,\n",
+    "            nldb_and_manual_areas,\n",
     "            protected_areas_nld,\n",
     "            combined_basins,\n",
     "            manual_boxes,\n",
@@ -711,6 +711,16 @@
     "    .reset_index(drop=False)\n",
     "    .rename(columns={\"index\": \"protection_zone_id\"})\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcacf25c-ffd4-430d-b762-e56cf2f2f3a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "protected_areas.sample(5)"
    ]
   },
   {
