readme file updated; notebook description updated

--- a/notebooks/create-SLIIDERS-ECON/exposure/6-generate_datum_conversion_grid.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/6-generate_datum_conversion_grid.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "## Generate Datum Conversion Grid\n",
     "\n",
-    "This notebook cleans and aggregates the downloaded XGM2019e and EGM geoid data, which is split up into quarters of the full grid. See `notebooks/create-SLIIDERS/download-sliiders-econ-input-data.ipynb` for more details related to downloading."
+    "This notebook cleans and aggregates the downloaded XGM2019e and EGM geoid data, which is split up into quarters of the full grid. It also interpolates (or converts) the mean dynamic topography (MDT) data into grid structure used in XGM2019e and EGM data. Finally, geoid heights and MDT information are combined into one dataset (in `xarray.Dataset` format) and the final dataset is exported as a `.zarr` storage.\n",
+    "\n",
+    "See `notebooks/create-SLIIDERS/download-sliiders-econ-input-data.ipynb` for more details related to downloading the raw data used in this notebook."
    ]
   },
   {
