functions moved to io.py and spatial.py

--- a/notebooks/create-SLIIDERS-ECON/exposure/6-generate_datum_conversion_grid.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/6-generate_datum_conversion_grid.ipynb
@@ -39,7 +39,10 @@
     "from sliiders import gcs\n",
     "from pyinterp.backends.xarray import Grid2D\n",
     "from pyinterp.fill import gauss_seidel\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "\n",
+    "from sliiders.io import read_gdf\n",
+    "from sliiders.spatial import interpolate_da_like"
    ]
   },
   {
@@ -63,67 +66,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interpolate_da_like(da_in, da_out):\n",
-    "    \"\"\"Based on the coordinates of `da_out`, interpolate (bicubic) the data that is\n",
-    "    contained in `da_in`; both `da_in` and `da_out` need to be `xarray.DataArray`s in\n",
-    "    two-dimensional grid format, with coordinates `lon` and `lat`.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    da_in : xarray.DataArray\n",
-    "        containing data that needs interpolation\n",
-    "    da_out : xarray.DataArray\n",
-    "        containing grid structure that `da_in` data will be interpolated over\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    xarray.DataArray\n",
-    "        containing bicubic interpolated version of `da_in` based on the grids of\n",
-    "        `da_out`\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
-    "    xx, yy = np.meshgrid(da_out.lon.values, da_out.lat.values)\n",
-    "    interpolator = Grid2D(da_in, geodetic=True)\n",
-    "    interp_out = interpolator.bicubic(coords={\"lon\": xx.flatten(), \"lat\": yy.flatten()})\n",
-    "\n",
-    "    return xr.DataArray(\n",
-    "        interp_out.reshape(len(da_out.lat), len(da_out.lon)),\n",
-    "        dims=[\"lat\", \"lon\"],\n",
-    "        coords=dict(da_out.coords),\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def read_gdf(fpath):\n",
-    "    \"\"\"Reads in the `.gdf` file located at `fpath` into `pandas.DataFrame`, assigns\n",
-    "    columns `lon` for longitude, `lat` for latitude, and `z` for data (such as geoid),\n",
-    "    then returns a `xarray.DataArray` containing the values of `z` and coordinates\n",
-    "    `lon` and `lat`.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    fpath : pathlib.Path-like\n",
-    "        path where the `.gdf` file of interest is located at\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    xarray.DataArray\n",
-    "        containing values of `z` with coordinates `lon` and `lat`\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
-    "    return (\n",
-    "        pd.read_table(\n",
-    "            fpath,\n",
-    "            skiprows=36,\n",
-    "            names=[\"lon\", \"lat\", \"z\"],\n",
-    "            delim_whitespace=True,\n",
-    "        )\n",
-    "        .set_index([\"lon\", \"lat\"])\n",
-    "        .z.to_xarray()\n",
-    "    )\n",
-    "\n",
-    "\n",
     "def read_gdf_grids(in_dir):\n",
     "    \"\"\"Combining all `.gdf` files in the directory `in_dir` to form an\n",
     "    `xarray.DataArray` over a single grid structure; also, for longitude systems where\n",
@@ -314,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "9c3b0628-234d-4323-920c-80ebeeb9caac",
    "metadata": {},
    "outputs": [
