--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -64,15 +64,14 @@
    "outputs": [],
    "source": [
     "# creating select directories\n",
-    "PWT_DIRECTORY = Path(os.path.dirname(sset.PATH_PWT_RAW))\n",
-    "IMF_WEO_DIRECTORY = Path(os.path.dirname(sset.PATH_IMF_WEO_RAW))\n",
-    "MPD_DIRECTORY = Path(os.path.dirname(sset.PATH_MPD_RAW))\n",
-    "GWDB_DIRECTORY = Path(os.path.dirname(sset.PATH_GWDB2021_RAW))\n",
-    "SRTM15PLUS_DIRECTORY = Path(os.path.dirname(sset.PATH_SRTM15_PLUS))\n",
-    "MDT_DIRECTORY = Path(os.path.dirname(sset.PATH_GEOG_MDT_RAW))\n",
+    "PWT_DIRECTORY = sset.PATH_PWT_RAW.parent\n",
+    "IMF_WEO_DIRECTORY = sset.PATH_IMF_WEO_RAW.parent\n",
+    "MPD_DIRECTORY = sset.PATH_MPD_RAW.parent\n",
+    "GWDB_DIRECTORY = sset.PATH_GWDB2021_RAW.parent\n",
+    "SRTM15PLUS_DIRECTORY = sset.PATH_SRTM15_PLUS.parent\n",
+    "MDT_DIRECTORY = sset.PATH_GEOG_MDT_RAW.parent\n",
     "\n",
     "directories_to_create = [\n",
-    "    sset.DIR_YPK_RAW,\n",
     "    PWT_DIRECTORY,\n",
     "    IMF_WEO_DIRECTORY,\n",
     "    MPD_DIRECTORY,\n",
@@ -94,7 +93,7 @@
     "    sset.DIR_GEOG_DATUMS_EGM96_WGS84,\n",
     "]\n",
     "for direc in directories_to_create:\n",
-    "    os.makedirs(direc, exist_ok=True)"
+    "    direc.mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
@@ -581,7 +580,7 @@
    "source": [
     "### SRTM 15+\n",
     "\n",
-    "We download the latest version, which is version 2.4 (as of 2022-03-29)."
+    "We use version 2.3."
    ]
   },
   {
@@ -593,7 +592,7 @@
    "source": [
     "# Workaround for urllib request error\n",
     "ssl._create_default_https_context = ssl._create_unverified_context\n",
-    "URL_SRTM15 = \"https://topex.ucsd.edu/pub/srtm15_plus/SRTM15_V2.4.nc\"\n",
+    "URL_SRTM15 = \"https://topex.ucsd.edu/pub/srtm15_plus/SRTM15_V2.3.nc\"\n",
     "\n",
     "urequest.urlretrieve(URL_SRTM15, SRTM15PLUS_DIRECTORY / URL_SRTM15.split(\"/\")[-1])"
    ]
