Update to generate datum conversion grid (#19)
* data acquisition for the original CIA WFB data

* renaming the file names due to merging data acquisition files

* data acquisition notebook and related settings updated

* settings update for SRTM15+ V2.4

* updating notebooks for SRTM15+ V2.4

* SRTM15+ update (keeping the Path as V2.3 due to dependencies issue)

* updated paths and directories

* cleared outputs for better viewing

* updated paths and directories; outputs cleared for better viewing

* download-srtm-plus.ipynb: absorbed by the workflow in download-sliiders-econ.ipynb

* README.md updated for merging the data acquisition files

* README.md files updated for merging the data acquisition files

* changing the math notations for viewing in markdown files

* date change for README.md

* added instructions for downloading global geoids; updated settings

* spatial function addition

* docstring added to 'get_iso_geometry'

* added functionalities for datum conversion

* file names changed for including datum-conversion process

* 'Grid2D' added for the function 'interpolate_da_like'

* path updated for MDT

* format changes with isort+black

* adding the datum conversion notebook (EGM+MDT)

* MDT download instructions added; MDT Path updated

* some functions moved directly to generate_datum_conversion file; name numberings changed for inserting 6-generate_datum_conversion_grid.ipynb

* readme file updated; notebook description updated

* functions moved to io.py and spatial.py

* unused import removed

* history information removed

* make Path-related updates; SRTM version corrected

Co-authored-by: Junho Choi <junhoc@uchicago.edu>

--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -64,19 +64,20 @@
    "outputs": [],
    "source": [
     "# creating select directories\n",
-    "PWT_DIRECTORY = Path(os.path.dirname(sset.PATH_PWT_RAW))\n",
-    "IMF_WEO_DIRECTORY = Path(os.path.dirname(sset.PATH_IMF_WEO_RAW))\n",
-    "MPD_DIRECTORY = Path(os.path.dirname(sset.PATH_MPD_RAW))\n",
-    "GWDB_DIRECTORY = Path(os.path.dirname(sset.PATH_GWDB2021_RAW))\n",
-    "SRTM15PLUS_DIRECTORY = Path(os.path.dirname(sset.PATH_SRTM15_PLUS))\n",
+    "PWT_DIRECTORY = sset.PATH_PWT_RAW.parent\n",
+    "IMF_WEO_DIRECTORY = sset.PATH_IMF_WEO_RAW.parent\n",
+    "MPD_DIRECTORY = sset.PATH_MPD_RAW.parent\n",
+    "GWDB_DIRECTORY = sset.PATH_GWDB2021_RAW.parent\n",
+    "SRTM15PLUS_DIRECTORY = sset.PATH_SRTM15_PLUS.parent\n",
+    "MDT_DIRECTORY = sset.PATH_GEOG_MDT_RAW.parent\n",
     "\n",
     "directories_to_create = [\n",
-    "    sset.DIR_YPK_RAW,\n",
     "    PWT_DIRECTORY,\n",
     "    IMF_WEO_DIRECTORY,\n",
     "    MPD_DIRECTORY,\n",
     "    GWDB_DIRECTORY,\n",
     "    SRTM15PLUS_DIRECTORY,\n",
+    "    MDT_DIRECTORY,\n",
     "    sset.DIR_WB_WDI_RAW,\n",
     "    sset.DIR_LITPOP_RAW,\n",
     "    sset.DIR_GEG15_RAW,\n",
@@ -88,9 +89,11 @@
     "    sset.DIR_OECD_REGIONS_RAW,\n",
     "    sset.DIR_LANDSCAN_RAW,\n",
     "    sset.DIR_IIASA_PROJECTIONS,\n",
+    "    sset.DIR_GEOG_DATUMS_XGM2019e_WGS84,\n",
+    "    sset.DIR_GEOG_DATUMS_EGM96_WGS84,\n",
     "]\n",
     "for direc in directories_to_create:\n",
-    "    os.makedirs(direc, exist_ok=True)"
+    "    direc.mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
@@ -362,15 +365,9 @@
     "cia_files = [f\"factbook-{x}.zip\" for x in range(2000, 2021)]\n",
     "\n",
     "for i in tqdm(cia_files):\n",
-    "    skip = False\n",
-    "    for j in [2000, 2001, 2019, 2020]:\n",
-    "        if str(j) in i:\n",
-    "            skip = True\n",
-    "\n",
-    "    if not skip:\n",
-    "        cia_req = requests.get(\"/\".join([cia_download_url, i]))\n",
-    "        cia_zip = ZipFile(BytesIO(cia_req.content))\n",
-    "        cia_zip.extractall(str(sset.DIR_CIA_RAW))"
+    "    cia_req = requests.get(\"/\".join([cia_download_url, i]))\n",
+    "    cia_zip = ZipFile(BytesIO(cia_req.content))\n",
+    "    cia_zip.extractall(str(sset.DIR_CIA_RAW))"
    ]
   },
   {
@@ -583,7 +580,7 @@
    "source": [
     "### SRTM 15+\n",
     "\n",
-    "We download the latest version, which is version 2.4 (as of 2022-03-29)."
+    "We use version 2.3."
    ]
   },
   {
@@ -595,7 +592,7 @@
    "source": [
     "# Workaround for urllib request error\n",
     "ssl._create_default_https_context = ssl._create_unverified_context\n",
-    "URL_SRTM15 = \"https://topex.ucsd.edu/pub/srtm15_plus/SRTM15_V2.4.nc\"\n",
+    "URL_SRTM15 = \"https://topex.ucsd.edu/pub/srtm15_plus/SRTM15_V2.3.nc\"\n",
     "\n",
     "urequest.urlretrieve(URL_SRTM15, SRTM15PLUS_DIRECTORY / URL_SRTM15.split(\"/\")[-1])"
    ]
@@ -682,6 +679,25 @@
     "1. To download this dataset, you need to first apply for an Oak Ridge National Laboratory account (link [here](https://landscan.ornl.gov/user/apply)).\n",
     "2. After having gained access, go to the said website, click on \"DOWNLOAD\" -> \"LandScan Datasets\" -> \"Continue to download\" next to LandScan 2019.\n",
     "3. Click on \"By downloading LandScan 2019 I agree to the above terms\" in the following webpage; this will download the file `LandScan Global 2019.zip`. We save this in `sset.DIR_LANDSCAN_RAW`.\n",
+    "\n",
+    "### Global geoids, based on select Earth Gravitational Models (EGMs)\n",
+    "1. Go to the following International Centre for Global Earth Models (ICGEM) website (link [here](http://icgem.gfz-potsdam.de/calcgrid)) to reach the page \"Calculation of Gravity Field Functionals on Ellipsoidal Grids\".\n",
+    "2. Under **Model Selection**, select `XGM2019e_2159`.\n",
+    "3. Under **Functional Selection**, select `geoid`.\n",
+    "4. Under **Grid selection**, there's a **Grid Step [°]** option. Change the value to **0.05**. Also, make sure that the **Reference System** is `WGS84`.\n",
+    "5. Due to download size constraints, we need to download this data in 4 chunks. Do the following:\n",
+    "   - Split the full range of latitudes and longitudes in half, which yields the following 4 combinations of longitude-latitude ranges: $([-180, 0], [-90, 0]), ([-180, 0], [0, 90]), ([0, 180], [-90, 0])$, and $([0, 180], [0, 90])$.\n",
+    "   - Under **Grid selection** again, one can select the range of longitudes and latitudes. Select one of the above combinations and press `start computation`.\n",
+    "   - This will open up a new tab for calculations, which may take some time to complete. Once this is done, press **Download Grid**.\n",
+    "   - Once the download is complete, go back to the previous page with **Model selection**, **Functional selection**, and more. Make sure the selections you made are intact, select another longitude-latitude combination, and repeat the process until there are no combinations left.\n",
+    "6. Once the above steps are done, go back to Step 2 above; but instead of selecting `XGM2019e_2159` for **Model selection**, select `EGM96`. Go through the Steps 3 to 5 again with this new selection.\n",
+    "7. Once the downloads for `XGM2019e_2159` and `EGM96` are complete, you should have 4 files for each model (8 in total, in `.gdf` format). Save the `XGM2019e_2159` files in `sset.DIR_GEOG_DATUMS_XGM2019e_WGS84` and `EGM96` files in `sset.DIR_GEOG_DATUMS_EGM96_WGS84`.\n",
+    "\n",
+    "### Global Mean Dynamic Ocean Topography (MDT) from AVISO+\n",
+    "**Note**: While this dataset has a relatively open license, you will first need to obtain a MY AVISO+ account, which requires verification from the AVISO+ team and may take several days or weeks.\n",
+    "1. Go to the following AVISO+ website for **MDT CNES-CLS18**: link [here](https://www.aviso.altimetry.fr/en/data/products/auxiliary-products/mdt/mdt-global-cnes-cls18.html).\n",
+    "2. Once on the page, download the dataset through your MY AVISO+ account (click on `access via MY AVISO+` link and follow the instructions).\n",
+    "3. After following the instructions, you will acquire the file `mdt_cnes_cls18_global.nc.gz`. Extract the file `mdt_cnes_cls18_global.nc` from the `.gz` file and save it as `sset.PATH_GEOG_MDT_RAW`.\n",
     "\n",
     "### CIA World Factbook (compiled by Coleman [2020])\n",
     "\n",
