--- a/notebooks/create-SLIIDERS-ECON/exposure/1. generate-protected-areas.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/1. generate-protected-areas.ipynb
@@ -566,7 +566,7 @@
    "id": "9c4c7a5f-d711-4537-96a3-b58a7d6ccf96",
    "metadata": {},
    "source": [
-    "These `nldb_and_manual_areas` regions were prepared manually and are included in the `sliiders` repository. Louisiana levees were downloaded from the National Levee Database (https://levees.sec.usace.army.mil/), and buffered areas corresponding to low-lying areas in California, Missouri, and Michigan that are known not to be vulnerable to coastal flooding were created."
+    "These `nldb_and_manual_areas` regions were prepared manually and are stored at `sset.PATH_US_MANUAL_PROTECTED_AREAS`. Louisiana levees were downloaded from the National Levee Database (https://levees.sec.usace.army.mil/), and buffered areas corresponding to low-lying areas in California, Missouri, and Michigan that are known not to be vulnerable to coastal flooding were created."
    ]
   },
   {
