suppress geom warnings; remove nldb metadata

--- a/notebooks/create-SLIIDERS-ECON/exposure/8-generate_protected_areas.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/8-generate_protected_areas.ipynb
@@ -32,8 +32,9 @@
     "from tqdm.notebook import tqdm\n",
     "\n",
     "from sliiders import settings as sset\n",
+    "from sliiders import spatial\n",
     "\n",
-    "warnings.filterwarnings(\"ignore\", message=\".*initial implementation of Parquet.*\")"
+    "spatial.filter_spatial_warnings()"
    ]
   },
   {
@@ -65,15 +66,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8040156-2cf0-4ac5-9070-2b6a1ae3954f",
+   "id": "8aef1e20-c8fe-4b8a-8bf6-23405757d948",
    "metadata": {},
    "outputs": [],
    "source": [
     "ocean_and_caspian = gpd.read_file(sset.PATH_NATURALEARTH_OCEAN)\n",
     "\n",
-    "ocean_and_caspian = ocean_and_caspian.explode().reset_index(drop=True)\n",
+    "ocean_and_caspian = ocean_and_caspian.explode(index_parts=False)\n",
     "\n",
     "ocean_and_caspian[\"area\"] = ocean_and_caspian.area\n",
+    "\n",
+    "# Sort so that ocean is first, Caspian is second\n",
     "ocean_and_caspian = ocean_and_caspian.sort_values(\"area\", ascending=False)"
    ]
   },
