minor update for path

--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -708,7 +708,7 @@
     "\n",
     "### HydroSHEDS\n",
     "1. Go to https://hydrosheds.org/downloads\n",
-    "2. Download the \"standard\" level-0 HydroBASINS files for each continent (use the Dropbox link if available--this appears as \"NOTE: you may also download data from here.\" as of 8/16/21. Download the shapefiles into the directory defined in `settings.py` by `DIR_HYDROBASINS_RAW`"
+    "2. Download the \"standard\" level-0 HydroBASINS files for each continent (use the Dropbox link if available--this appears as \"NOTE: you may also download data from here.\" as of 8/16/21. Download the shapefiles into the directory defined in `sset.DIR_HYDROBASINS_RAW`"
    ]
   }
  ],
