--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -97,10 +97,18 @@
   {
    "cell_type": "markdown",
    "id": "9e1d4cce-5cc8-4c4d-b3cd-1aaf56e90ce9",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Fetching raw data from various sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83c92a29-bd27-4b1d-838c-7989d7561757",
    "metadata": {},
    "source": [
-    "## Fetching raw data from various sources\n",
-    "\n",
     "### Penn World Tables 10.0 (PWT 10.0)"
    ]
   },
@@ -709,6 +717,50 @@
     "### HydroSHEDS\n",
     "1. Go to https://hydrosheds.org/downloads\n",
     "2. Download the \"standard\" level-0 HydroBASINS files for each continent (use the Dropbox link if available--this appears as \"NOTE: you may also download data from here.\" as of 8/16/21. Download the shapefiles into the directory defined in `sset.DIR_HYDROBASINS_RAW`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "438f5274-f65c-41a3-8deb-7e62069f6138",
+   "metadata": {},
+   "source": [
+    "### Other SLIIDERS input datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b048d8c-ef4e-4119-9de5-9ec341f0d5a5",
+   "metadata": {},
+   "source": [
+    "There are three datasets that were manually constructed for use in `SLIIDERS`. They are available for download on Zenodo. Please download each file from Zenodo and copy to the path designated here.\n",
+    "\n",
+    "1. `ne_coastline_lines_CIAM_wexp_or_gtsm.shp`\n",
+    "Path: `sset.PATH_CIAM_COASTLINES` (All files sharing the name `ne_coastline_lines_CIAM_wexp_or_gtsm`, but with different extensions, should be downloaded to this directory.)\n",
+    "Link: [TODO - include Zenodo link]\n",
+    "\n",
+    "Using the global coastlines derived from the Natural Earth layers, we included individual land masses formed by these coastlines only if they have either i) a non-zero value of exposure based on our exposure grid for population and capital assets, OR ii) if they have an associated coastal segment point, as derived primarily from the CoDEC GTSM station points. Association of a given land mass to nearby CoDEC point(s) was determined through manual inspection of the subset of land masses (n=636) with zero exposure in order to assess whether an intersecting or nearby station point represented that land area, resulting in the inclusion of 171 small land masses for which no population or capital is present but for which a coast point is associated.\n",
+    "\n",
+    "2. `gtsm_stations_eur_tothin.shp`\n",
+    "Path: [TODO - fill this] (All files sharing the name `ne_coastline_lines_CIAM_wexp_or_gtsm`, but with different extensions, should be downloaded to this directory.)\n",
+    "Link: [TODO - include Zenodo link]\n",
+    "\n",
+    "These 5,637 station points are a subset of the full CoDEC dataset (n=14,110) representing sites along European coastlines that are roughly five times more densely-spaced compared to the rest of the globe, as described in Muis et al. 2020. This subset of points are those that will be thinned by 5x to approximately match the density of CoDEC coast stations globally. Some manual inclusion criteria for this subset was applied in GIS due to the fact that simply seeking to select dense European stations based on the “station_name” field in the dataset, which contains the substring “eur” for all European locations, results in an over-selection of desired points (n=6,132), with many North African coastal points that are not densely-spaced containing this substring in their “station_name” as well. Therefore, European points were manually identified, with small islands, such as in the Mediterranean, included if their land mass contained 5 or more station points, which guarantees that they will be represented by at least one station point following the 5x thinning process. The resultant subset of points is used as a data input for the coastal segment construction in the preprocessing of the SLIIDERS dataset.\n",
+    "\n",
+    "3. `us_manual_protected_areas.parquet`\n",
+    "Path: `sset.PATH_US_MANUAL_PROTECTED_AREAS`\n",
+    "Link: [TODO - include Zenodo link]\n",
+    "\n",
+    "The regions defined in this dataset represent a few areas in the United States that may have low-lying elevations, but are not vulnerable to flooding due to constructed barriers or since they are completely separated from the coastline by topographical features with much higher elevations. Areas protected by Louisiana levees were downloaded from the National Levee Database (https://levees.sec.usace.army.mil/), and areas corresponding to low-lying areas in California, Missouri, and Michigan that are not vulnerable to coastal flooding were created using spatial buffers around a central point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0323ad0-afc1-43bf-9e5b-82e37e5455ce",
+   "metadata": {},
+   "source": [
+    "### CoastalDEM v1.1\n",
+    "1. Acquire the global 1 arc-second CoastalDEM dataset from Climate Central (https://go.climatecentral.org/coastaldem/).\n",
+    "2. Save all 1-degree GeoTIFF files in `sset.DIR_COASTALDEM`"
    ]
   }
  ],
